# booking-api

./: .env.example  .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: core.mdc  testing.mdc
.github/workflows/: ci.yml  deploy.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 74c0950b6977_initial_schema.py  a1b2c3d4e5f6_add_expired_booking_status.py  dbd0dc11056d_add_space_business_rules_and_user_max_.py
k8s/: namespace.yaml  network-policy.yaml
k8s/api/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
k8s/redis/: deployment-redis.yaml
k8s/secrets/: secret.yaml
k8s/worker/: deployment-beat.yaml  deployment-worker.yaml
postman/: collection.json  environment.json
scripts/: generate_postman_collection.py  run_newman.py  seed.py
src/booking/api/: app_factory.py  deps.py  exception_handlers.py  main.py
src/booking/api/routers/: admin.py  auth.py  bookings.py  dev.py  health.py  spaces.py
src/booking/api/schemas/: admin_schemas.py  auth_schemas.py  booking_schemas.py  space_schemas.py
tests/: conftest.py  test_placeholder.py
tests/integration/: test_api_http.py  test_booking_repository.py  test_space_repository.py  test_user_repository.py
tests/unit/application/: test_admin_spaces.py  test_cancel_booking.py  test_create_booking.py  test_get_availability.py  test_get_booking.py  test_list_admin_bookings.py  test_list_spaces.py  test_list_user_bookings.py  test_login_user.py  test_password_reset.py  test_refresh_access_token.py  test_register_user.py  test_update_booking.py  test_update_user_admin.py
tests/unit/domain/: test_booking_entity.py  test_space_entity.py  test_time_slot.py  test_value_objects.py
tests/unit/infrastructure/: test_logging_notification_service.py  test_memory_availability_cache.py
(+65 files in other folders)
